# vision-assist-pro

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
resources/: style.qss
src/: main.py
src/gui/: capture_overlay.py  main_window.py  widgets.py
src/services/: capture_service.py  ocr_service.py  summary_service.py  translation_service.py  vision_service.py
src/utils/: config.py
